Revise game instructions in index.html
Updated game instructions and added a refresh note.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="game-container">
         <h1>🔢 Guess the Number!</h1>
-        <p>I'm thinking of a number between 1 and 100.</p>
+        <p>I'm thinking of a number between 1 and 100. Refresh the page to play again.</p>
         <p>Enter your guess below:</p>
         <input type="number" id="guessInput" min="1" max="100">
         <button onclick="checkGuess()">Guess</button>
@@ -140,3 +140,4 @@
     </script>
 </body>
 </html>
+
